	 options.pl,options-{header,resource}.pl,picture.{c,h,rc},pokefinder.h,
	 roms.{c,h,rc},select_template.{h,rc},win32ui.c}: Win32: Made dialogs
	 use IDOK, IDCANCEL, IDCLOSE and IDCONTINUE to use dialog manager's
	 capabilities
	 (http://blogs.msdn.com/oldnewthing/archive/2004/12/14/300204.aspx)
	 (Marek).
20080328 loader.c: let loader detection work with the Digital Integration
	 loader (ATF, Tomahawk, TT Racer).
20080401 z80/z80_ops.c: cgoto array was one entry too small, leading to
	 buffer overflow (fixes bug #1931036).
20080401 loader.[ch],settings.dat,tape.c,ui/options.dat: add support for
	 tape acceleration (slightly extended version of patch #1880376).
20080401 loader.c: add acceleration for Search Loader (Deflektor, Rana Rama).
20080409 machines/{pentagon.c,pentagon512.c,pentagon1024.c},man/fuse.1,menu.c,
         settings.[dat|pl]: change Pentagon 128k back to being a machine as
         described in the RusFAQ and emulated by older versions of Fuse and
         other Spectrum emulators for SZX and other snapshot compatibility with
         those emulators, leave the Pentagon 512k and 1024k as later issue
         machines (Pentagon SL 1.x and 2.2?) as we are free to specify correct
         snapshot support for those machines (Fred).
20080409 roms/{plus3e-0.rom,plus3e-2.rom}: update to v1.36 of the +3e ROMs
         (Fred).
20080409 machines/{specplus3.c,specplus3e.c}: have the +3e share the +3 FDC
         (fixes bug #1931947) (Gergely Szasz).
20080409 disk/upd_fdc.c: initialise head_load member of upd_fdc struct
         (fixes bug #1931555) (Gergely Szasz).
20080415 fuse.c,memory.[ch],menu.c,tape.[ch],ui/win32/win32ui.c: don't use tape
         traps or auto-load snapshots if we are using a custom ROM as the entry
         points are very likely to have moved (Fred).
20080417 kempmouse.[ch],fuse.c: write Kempston mouse status to snapshots
         (Fred).
20080418 simpleide.c: add snapshot support for Simple 8-bit IDE interface
         (Fred).