@@ -111,6 +111,7 @@ int libspectrum_split_to_48k_pages( libspectrum_snap *snap,
 #define SNAPSHOT_ZXCF_PAGES 64
 #define SNAPSHOT_DOCK_EXROM_PAGES 8
 #define SNAPSHOT_JOYSTICKS 7
+#define SNAPSHOT_DIVIDE_PAGES 4
 
 /* Get memory for a snap */
 
