@@ -320,6 +320,8 @@ libspectrum_sna_write( libspectrum_byte **buffer, size_t *length,
     *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
   if( libspectrum_snap_simpleide_active( snap ) )
     *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
+  if( libspectrum_snap_divide_active( snap ) )
+    *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
 
   /* We don't save the Interface II ROM at all */
   if( libspectrum_snap_interface2_active( snap ) )
